{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 23,
  "lineage": "7540ab78-e62d-3de7-e54f-54d371fdef02",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task_platform_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d52744d6551d851e",
            "arn": "arn:aws:ec2:ap-northeast-1:578109960340:instance/i-09634bc906507fb33",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09634bc906507fb33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task-platform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08619e606f2ace004"
              }
            ],
            "primary_network_interface_id": "eni-08619e606f2ace004",
            "private_dns": "ip-10-10-1-65.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.65",
            "public_dns": "ec2-35-74-243-242.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.243.242",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00421390f99f93896",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f4cde74ee92059c",
            "tags": {
              "Name": "task-platform-server"
            },
            "tags_all": {
              "Name": "task-platform-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0080d250b5597ced7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "578109960340",
            "id": "i-09634bc906507fb33",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.task_platform_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.task_platform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578109960340:internet-gateway/igw-0bb44523b2acb3feb",
            "id": "igw-0bb44523b2acb3feb",
            "owner_id": "578109960340",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-platform-igw"
            },
            "tags_all": {
              "Name": "task-platform-igw"
            },
            "vpc_id": "vpc-0d35e656cdf5dbb4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "578109960340",
            "id": "igw-0bb44523b2acb3feb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.task_platform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578109960340:route-table/rtb-0d21af4e3fe534b79",
            "id": "rtb-0d21af4e3fe534b79",
            "owner_id": "578109960340",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb44523b2acb3feb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-platform-public-rt"
            },
            "tags_all": {
              "Name": "task-platform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d35e656cdf5dbb4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "578109960340",
            "id": "rtb-0d21af4e3fe534b79",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.task_platform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c76ead53f5a3075c",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0d21af4e3fe534b79",
            "subnet_id": "subnet-08f4cde74ee92059c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "578109960340",
            "id": "rtbassoc-0c76ead53f5a3075c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.task_platform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task_platform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578109960340:security-group/sg-0080d250b5597ced7",
            "description": "Allow SSH and App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0080d250b5597ced7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task-platform-sg",
            "name_prefix": "",
            "owner_id": "578109960340",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-platform-sg"
            },
            "tags_all": {
              "Name": "task-platform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d35e656cdf5dbb4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "578109960340",
            "id": "sg-0080d250b5597ced7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.task_platform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578109960340:subnet/subnet-08f4cde74ee92059c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f4cde74ee92059c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "578109960340",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-platform-public-subnet"
            },
            "tags_all": {
              "Name": "task-platform-public-subnet"
            },
            "vpc_id": "vpc-0d35e656cdf5dbb4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "578109960340",
            "id": "subnet-08f4cde74ee92059c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.task_platform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_platform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578109960340:vpc/vpc-0d35e656cdf5dbb4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f70f8f643eb92cfe",
            "default_route_table_id": "rtb-02de4b94433304b25",
            "default_security_group_id": "sg-0b1349af17e96f940",
            "dhcp_options_id": "dopt-03e5ff2209a0fbbf9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d35e656cdf5dbb4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02de4b94433304b25",
            "owner_id": "578109960340",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "task-platform-vpc"
            },
            "tags_all": {
              "Name": "task-platform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "578109960340",
            "id": "vpc-0d35e656cdf5dbb4e",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}